[package]
name = "lavender"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
image = "0.24.5"
sha3 = "0.10.6"
toml = "0.8.1"
walkdir = "2.4.0"
tokio = { version = "1.33.0", features = ["full", "signal"] }
axum = { version = "0.6.20", features = ["macros", "query"] }
serde = { version = "1.0.189", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
