[package]
name = "lavender"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
sha3 = "0.10.6"
toml = "0.8.1"
walkdir = "2.4.0"
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "0.7.3", features = ["macros", "query"] }
serde = { version = "1.0.189", features = ["derive"] }
hyper = { version = "1.1.0", features = ["full"] }
color-eyre = "0.6.2"
serde_json = "1.0.110"

[dev-dependencies]
axum-test = "14.2.2"
